Fix composer name and description.

--- a/composer.json
+++ b/composer.json
@@ -1,28 +1,28 @@
 {
-  "name": "DigitalState/Platform-User-Bundle",
-  "type": "symfony-bundle",
-  "description": "Digital State User Bundle",
-  "homepage": "https://github.com/DigitalState/Platform-User-Bundle.git",
-  "keywords": ["Oro", "Communication"],
-  "license": "MIT",
-  "authors": [
-    {
-      "name": "Digital State, Inc",
-      "homepage": "http://www.digitalState.ca"
+    "name": "digitalstate/platform-user-bundle",
+    "type": "symfony-bundle",
+    "description": "DigitalState User Bundle",
+    "homepage": "https://github.com/DigitalState/Platform-User-Bundle.git",
+    "keywords": ["Oro", "Communication"],
+    "license": "MIT",
+    "authors": [
+        {
+            "name": "DigitalState, Inc",
+            "homepage": "http://www.digitalstate.ca"
+        }
+    ],
+    "require": {
+        "php": ">=5.6",
+        "digitalstate/platform-data-bundle" : "dev-master"
+    },
+    "autoload": {
+        "psr-0": { "Ds\\Bundle\\UserBundle": "" }
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true,
+    "extra": {
+        "branch-alias": {
+            "dev-master": "0.x-dev"
+        }
     }
-  ],
-  "require": {
-    "php": ">=5.6",
-    "DigitalState/Platform-Data-Bundle" : "dev-master"
-  },
-  "autoload": {
-    "psr-0": { "Ds\\Bundle\\UserBundle": "" }
-  },
-  "minimum-stability": "dev",
-  "prefer-stable": true,
-  "extra": {
-    "branch-alias": {
-      "dev-master": "0.x-dev"
-    }
-  }
 }
