--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
     ],
     "require": {
         "php": ">=5.6",
+        "oro/platform": "1.10.*",
         "digitalstate/platform-data-bundle" : "dev-master"
     },
     "autoload": {
