--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         "digitalstate/platform-data-bundle" : "dev-master"
     },
     "autoload": {
-        "psr-4": { "Ds\\Bundle\\UserBundle": "" }
+        "psr-4": { "Ds\\Bundle\\UserBundle\\": "" }
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
