--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "require": {
         "php": ">=5.6",
         "oro/platform": "1.10.*",
-        "digitalstate/platform-data-bundle" : "dev-master"
+        "digitalstate/platform-data-bundle" : "~0.1.0"
     },
     "autoload": {
         "psr-4": { "Ds\\Bundle\\UserBundle\\": "" }
