--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     ],
     "require": {
         "php": ">=5.6",
-        "oro/platform": "1.10.*",
+        "oro/platform": "1.10.*|^2.0",
         "digitalstate/platform-data-bundle" : "~0.1"
     },
     "autoload": {
